Adding Report.pdf

--- a/19127109_Lab3/19127109_Lab3.vcxproj
+++ b/19127109_Lab3/19127109_Lab3.vcxproj
@@ -157,6 +157,9 @@
     <ClInclude Include="FeatureDetector.h" />
     <ClInclude Include="MatchBySIFT_KNN.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Report_VNmese.pdf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
