--- a/19127109_Lab3/19127109_Lab3.vcxproj.filters
+++ b/19127109_Lab3/19127109_Lab3.vcxproj.filters
@@ -50,4 +50,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Report_VNmese.pdf" />
+  </ItemGroup>
 </Project>
